--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="navbar.css">
   <link rel="stylesheet" href="footer.css">
-  <link rel="stylesheet" href="css/faq.css">
-  <link rel="stylesheet" href="css/works-story.css">
+  <link rel="stylesheet" href="/css/faq.css">
+  <link rel="stylesheet" href="/css/works-story.css">
 </head>
 <body>
   <!-- Sticky Navbar -->
@@ -1875,7 +1875,7 @@ Google Search Console en Google Analytics worden netjes ingericht. Wil je zelf i
     }
   </style>
 
-  <script src="js/faq.js"></script>
-  <script src="js/works-story.js"></script>
+  <script src="/js/faq.js"></script>
+  <script src="/js/works-story.js"></script>
 </body>
 </html>
