--- a/index.html
+++ b/index.html
@@ -79,12 +79,56 @@ Voor zzp en mkb in Limburg die vooruit willen met een sterke website.
 
     <!-- Bottom Section -->
     <div class="bottom-section">
-      <!-- Column 1 - Response Time Card -->
+      <!-- Column 2 - Four Features Stacked (appears FIRST on mobile) -->
+      <div class="features-column">
+        <div class="feature-card">
+          <div class="feature-icon feature-icon-image">
+            <img src="/khcustomweb_logo.webp" alt="KH Custom Web">
+          </div>
+          <div class="feature-content">
+            <h3 class="feature-title">Maatwerk voor jouw branche</h3>
+            <p class="feature-description">Elke sector van bouw tot coaching en dienstverlening
+Compleet opgeleverd.</p>
+          </div>
+        </div>
+
+        <div class="feature-card">
+          <div class="feature-icon feature-icon-image">
+            <img src="/khcustomweb_logo.webp" alt="KH Custom Web">
+          </div>
+          <div class="feature-content">
+            <h3 class="feature-title">Sterk in lokale SEO</h3>
+            <p class="feature-description">Scoor beter in Google in jouw regio. Ideaal voor lokale ondernemers in Limburg.</p>
+          </div>
+        </div>
+
+        <div class="feature-card">
+          <div class="feature-icon feature-icon-image">
+            <img src="/khcustomweb_logo.webp" alt="KH Custom Web">
+          </div>
+          <div class="feature-content">
+            <h3 class="feature-title">Voor ondernemers die willen winnen</h3>
+            <p class="feature-description">Laat je concurrenten achter met een website die wél resultaat levert. </p>
+          </div>
+        </div>
+
+        <div class="feature-card">
+          <div class="feature-icon feature-icon-image">
+            <img src="/khcustomweb_logo.webp" alt="KH Custom Web">
+          </div>
+          <div class="feature-content">
+            <h3 class="feature-title">Slimme functies geïntegreerd</h3>
+            <p class="feature-description">Offerteformulier, WhatsApp-knop of boekingssysteem.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Column 1 - Response Time Card (appears AFTER features on mobile) -->
       <div class="card card-response-time" id="responseTimeCard">
         <div class="rt-overlay"></div>
         <div class="rt-glow rt-glow-1"></div>
         <div class="rt-glow rt-glow-2"></div>
- 
+
         <div class="rt-content">
           <div class="rt-timer-box">
             <div class="rt-timer-overlay"></div>
@@ -129,50 +173,6 @@ Voor zzp en mkb in Limburg die vooruit willen met een sterke website.
                 <polyline points="12 5 19 12 12 19"/>
               </svg>
             </a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Column 2 - Four Features Stacked -->
-      <div class="features-column">
-        <div class="feature-card">
-          <div class="feature-icon feature-icon-image">
-            <img src="/khcustomweb_logo.webp" alt="KH Custom Web">
-          </div>
-          <div class="feature-content">
-            <h3 class="feature-title">Maatwerk voor jouw branche</h3>
-            <p class="feature-description">Elke sector van bouw tot coaching en dienstverlening
-Compleet opgeleverd.</p>
-          </div>
-        </div>
-
-        <div class="feature-card">
-          <div class="feature-icon feature-icon-image">
-            <img src="/khcustomweb_logo.webp" alt="KH Custom Web">
-          </div>
-          <div class="feature-content">
-            <h3 class="feature-title">Sterk in lokale SEO</h3>
-            <p class="feature-description">Scoor beter in Google in jouw regio. Ideaal voor lokale ondernemers in Limburg.</p>
-          </div>
-        </div>
-
-        <div class="feature-card">
-          <div class="feature-icon feature-icon-image">
-            <img src="/khcustomweb_logo.webp" alt="KH Custom Web">
-          </div>
-          <div class="feature-content">
-            <h3 class="feature-title">Voor ondernemers die willen winnen</h3>
-            <p class="feature-description">Laat je concurrenten achter met een website die wél resultaat levert. </p>
-          </div>
-        </div>
-
-        <div class="feature-card">
-          <div class="feature-icon feature-icon-image">
-            <img src="/khcustomweb_logo.webp" alt="KH Custom Web">
-          </div>
-          <div class="feature-content">
-            <h3 class="feature-title">Slimme functies geïntegreerd</h3>
-            <p class="feature-description">Offerteformulier, WhatsApp-knop of boekingssysteem.</p>
           </div>
         </div>
       </div>
