--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KHCustomWeb - Webdesign voor ondernemers in Limburg</title>
+
+  <link rel="preload" href="styles.css" as="style">
+  <link rel="preload" href="navbar.css" as="style">
+  <link rel="preload" href="/khcustomweb_logo.webp" as="image">
+
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="navbar.css">
-  <link rel="stylesheet" href="footer.css">
-  <link rel="stylesheet" href="/css/faq.css">
-  <link rel="stylesheet" href="/css/works-story.css">
+  <link rel="stylesheet" href="footer.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/faq.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/works-story.css" media="print" onload="this.media='all'">
+  <noscript>
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="/css/faq.css">
+    <link rel="stylesheet" href="/css/works-story.css">
+  </noscript>
 </head>
 <body>
   <!-- Sticky Navbar -->
@@ -1875,7 +1885,7 @@ Google Search Console en Google Analytics worden netjes ingericht. Wil je zelf i
     }
   </style>
 
-  <script src="/js/faq.js"></script>
-  <script src="/js/works-story.js"></script>
+  <script src="/js/faq.js" defer></script>
+  <script src="/js/works-story.js" defer></script>
 </body>
 </html>
