--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       </button>
 
       <div class="navbar-links" id="navbarLinks">
-        <a href="/" class="navbar-link active">Home</a>
-        <a href="/diensten.html" class="navbar-link">Diensten</a>
+        <a href="#home" class="navbar-link active">Home</a>
+        <a href="#diensten" class="navbar-link">Diensten</a>
         <a href="#over-ons" class="navbar-link">Over ons</a>
         <a href="#portfolio" class="navbar-link">Portfolio</a>
         <a href="#contact" class="navbar-cta">
