--- a/index.html
+++ b/index.html
@@ -282,11 +282,20 @@ Compleet opgeleverd.</p>
               <div class="step-content">
                 <h3 class="step-title">Kennismakingsgesprek</h3>
                 <p class="step-description">
-                  We starten met een vrijblijvend gesprek om jouw doelen en wensen te bespreken.
-                  Wat wil je bereiken met je website? Welke functionaliteiten zijn belangrijk?
-                  Ik luister naar je verhaal, stel de juiste vragen en adviseer wat het beste werkt
-                  voor jouw bedrijf en doelgroep. Samen maken we een heldere briefing.
-                </p>
+                  <p>We starten met een telefonisch kennismakingsgesprek.
+  Het eerste contact loopt via de contactpagina, mail of WhatsApp. Je kunt ook direct naar de prijzenpagina gaan en daar jouw keuzes invullen. Deze worden samen met je gegevens naar mij doorgestuurd.
+</p>
+
+<p>
+  Op basis daarvan neem ik naderhand contact met je op om alles rustig door te spreken, aanvullende vragen te stellen en de juiste richting te bepalen voor jouw website.
+</p>
+
+<p>
+  Dit gesprek is vrijblijvend en bedoeld om helderheid te krijgen — niet om direct iets te verkopen.
+</p>
+
+
+              
               </div>
             </div>
 
