--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ Compleet opgeleverd.</p>
 </p>
 
 <p>
-  Dit gesprek is vrijblijvend en bedoeld om helderheid te krijgen — niet om direct iets te verkopen.
+  Dit gesprek is vrijblijvend en bedoeld om helderheid te krijgen niet om direct iets te verkopen.
 </p>
 
 
