--- a/index.html
+++ b/index.html
@@ -307,10 +307,7 @@ Compleet opgeleverd.</p>
               <div class="step-content">
                 <h3 class="step-title">Design & Ontwikkeling</h3>
                 <p class="step-description">
-                  Nu ga ik aan de slag met het ontwerp en de technische realisatie. Je krijgt
-                  regelmatig tussentijdse updates zodat je het voortschrijdende werk kunt bekijken.
-                  Feedback is altijd welkom - zo pas ik details aan en stem ik af waar nodig.
-                  Samen zorgen we dat het eindresultaat precies aansluit bij je verwachtingen.
+                  Op basis van de besproken richting ontwerp en bouw ik jouw website op maat. Ik zorg voor een duidelijke structuur, een passende uitstraling en een logische opbouw voor bezoekers. Je krijgt inzicht in de voortgang en kunt feedback geven, zodat we gericht kunnen bijsturen.
                 </p>
               </div>
             </div>
