--- a/index.html
+++ b/index.html
@@ -322,10 +322,7 @@ Compleet opgeleverd.</p>
               <div class="step-content">
                 <h3 class="step-title">Live & Ondersteuning</h3>
                 <p class="step-description">
-                  Je website is klaar en gaat live! Ik zorg voor een vlekkeloze lancering en regel
-                  alle technische zaken zoals hosting, SSL-certificaat en SEO-optimalisatie. Na de
-                  oplevering blijf ik beschikbaar voor vragen, kleine aanpassingen of uitbreidingen.
-                  Je staat er niet alleen voor - ook na de lancering kun je op me rekenen.
+                  Na akkoord zetten we de website live en zorg ik dat alles technisch goed werkt. In sommige pakketten is een vaste aanpastijd per maand inbegrepen voor kleine aanpassingen of uitbreidingen. Hosting en technisch basisonderhoud bedragen €15 per maand.
                 </p>
               </div>
             </div>
