--- a/index.html
+++ b/index.html
@@ -283,15 +283,10 @@ Compleet opgeleverd.</p>
                 <h3 class="step-title">Kennismakingsgesprek</h3>
                 <p class="step-description">
                   <p class="step-description">
-  We starten met een telefonisch kennismakingsgesprek.
+  We starten met een telefonisch vrijblijvend kennismakingsgesprek.
   Het eerste contact loopt via de contactpagina, mail of WhatsApp. Je kunt ook direct naar de prijzenpagina gaan en daar jouw keuzes invullen. Deze worden samen met je gegevens naar mij doorgestuurd.<br><br>
-  Op basis daarvan neem ik naderhand contact met je op om alles rustig door te spreken, aanvullende vragen te stellen en de juiste richting te bepalen voor jouw website.<br><br>
-  <strong> Dit gesprek is vrijblijvend en bedoeld om helderheid te krijgen niet om direct iets te verkopen. </strong>
-</p>
-
-
-
-              
+  Op basis daarvan neem ik naderhand contact met je op om alles rustig door te spreken, aanvullende vragen te stellen en de juiste richting te bepalen voor jouw website.
+</p>          
               </div>
             </div>
 
