--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ Compleet opgeleverd.</p>
               <div class="step-content">
                 <h3 class="step-title">Design & Ontwikkeling</h3>
                 <p class="step-description">
-                  Op basis van de besproken richting ontwerp en bouw ik jouw website op maat. Ik zorg voor een duidelijke structuur, een passende uitstraling en een logische opbouw voor bezoekers. Je krijgt inzicht in de voortgang en kunt feedback geven, zodat we gericht kunnen bijsturen.
+                  Op basis van de besproken richting ontwerp en bouw ik jouw website op maat, met een duidelijke structuur en passende uitstraling. Je kunt tussentijds meekijken en feedback geven.
                 </p>
               </div>
             </div>
