--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ Compleet opgeleverd.</p>
                       <div class="problem-icon">⚠️</div>
                       <h4 class="problem-title">Website laadt te langzaam</h4>
                       <p class="problem-text">Bezoekers verlaten je site binnen 3 seconden</p>
-                      <a href="#branches" class="screen-cta">Bekijk branches →</a>
+                      <a href="#branches" class="screen-cta">Zie hoe ik dit oplos →</a>
                     </div>
                   </div>
                 </div>
