--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@ Compleet opgeleverd.</p>
                     <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
                     <polyline points="22 4 12 14.01 9 11.01"></polyline>
                   </svg>
-                  <div class="kpi-value">0%</div>
-                  <div class="kpi-label">Vindt website niet binnen 3s</div>
+                  <div class="kpi-value">0% van mijn projecten</div>
+                  <div class="kpi-label">Laden langzamer dan 3 seconden</div>
                 </div>
 
                 <div class="kpi-card">
@@ -377,8 +377,8 @@ Compleet opgeleverd.</p>
                   <polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline>
                     <line x1="12" y1="22.08" x2="12" y2="12"></line>
                   </svg>
-                  <div class="kpi-value">1 week</div>
-                  <div class="kpi-label">Design klaar voor review</div>
+                  <div class="kpi-value">Binnen 1 week</div>
+                  <div class="kpi-label">Eerste design klaar om te bekijken</div>
                 </div>
               </div>
 
