--- a/index.html
+++ b/index.html
@@ -405,8 +405,9 @@ Compleet opgeleverd.</p>
                   <polyline points="12 6 12 12 16 14"></polyline>
                 </svg>
               </div>
-              <div class="promise-number">1-2 dagen</div>
-              <p>Zie hoe jouw toekomstige homepage eruit kan zien.</p>
+              <div class="promise-number">Geen standaard template</div>
+              <p>Elke demo wordt specifiek ontworpen voor jouw branche en doelen.
+Altijd maatwerk, vanaf de eerste versie.</p>
             </div>
             <div class="promise-item">
               <div class="promise-icon">
@@ -415,8 +416,8 @@ Compleet opgeleverd.</p>
                   <polyline points="22 4 12 14.01 9 11.01"></polyline>
                 </svg>
               </div>
-              <div class="promise-number">0%</div>
-              <p>Vindt je het niks? Dan houdt het daar op. Vind je het goed? Dan bouwen we verder.</p>
+              <div class="promise-number">Vrijblijvend beslissen</div>
+              <p>Past het niet bij je bedrijf? Dan stoppen we zonder verplichtingen. Je zit nergens aan vast voordat je akkoord geeft.</p>
             </div>
             <div class="promise-item">
               <div class="promise-icon">
@@ -426,8 +427,8 @@ Compleet opgeleverd.</p>
                   <line x1="12" y1="22.08" x2="12" y2="12"></line>
                 </svg>
               </div>
-              <div class="promise-number">1 week</div>
-              <p>Je site staat online en is klaar om klanten aan te trekken.</p>
+              <div class="promise-number">Klaar voor gebruik</div>
+              <p>Tekst Na akkoord wordt de website technisch afgerond en live gezet. Snel, stabiel en voorbereid op groei.</p>
             </div>
           </div>
 
