--- a/index.html
+++ b/index.html
@@ -395,7 +395,8 @@ Compleet opgeleverd.</p>
       <div class="demo-collage-container">
         <div class="demo-content">
           <h2 class="demo-heading">Eerst kijken, dan pas betalen</h2>
-          <p class="demo-intro">Ik weet dat woorden weinig zeggen — daarom laat ik liever <strong>zien</strong> wat ik maak. Je krijgt van mij een gratis demo van jouw website, volledig op maat en afgestemd op jouw stijl en doelen. Binnen één tot twee dagen zie je hoe jouw toekomstige homepage eruit kan zien, nog vóór je iets betaalt.</p>
+          <p class="demo-intro">Je hoeft bij mij niet eerst te beslissen op basis van een belofte.
+Bij elk project start ik standaard met een concrete demo van jouw website, zodat je ziet wat je kunt verwachten. Binnen 1–2 werkdagen ontvang je deze eerste opzet. Pas daarna bepaal je of we verdergaan. Zo weet je vooraf precies waar je aan toe bent.</p>
 
           <div class="demo-promise">
             <div class="promise-item">
@@ -432,9 +433,6 @@ Altijd maatwerk, vanaf de eerste versie.</p>
             </div>
           </div>
 
-          <div class="demo-footer">
-            <p class="demo-tagline">Geen risico, geen gedoe — gewoon eerst kijken, dan pas betalen. Omdat ik zeker weet dat je het verschil ziet zodra je het ziet.</p>
-          </div>
         </div>
 
         <div class="bento-grid-showcase bento-intro" id="bentoGrid">
