--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ Compleet opgeleverd.</p>
         <div class="demo-content">
           <h2 class="demo-heading">Eerst kijken, dan pas betalen</h2>
           <p class="demo-intro">Je hoeft bij mij niet eerst te beslissen op basis van een belofte.
-Bij elk project start ik standaard met een concrete demo van jouw website, zodat je ziet wat je kunt verwachten. Binnen 1–2 werkdagen ontvang je deze eerste opzet. Pas daarna bepaal je of we verdergaan. Zo weet je vooraf precies waar je aan toe bent.</p>
+Bij elk project start ik standaard met een concrete demo van jouw website, zodat je ziet wat je kunt verwachten. Binnen 1 of 2 werkdagen ontvang je deze eerste opzet. Pas daarna bepaal je of we verdergaan. Zo weet je vooraf precies waar je aan toe bent.</p>
 
           <div class="demo-promise">
             <div class="promise-item">
