--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ Altijd maatwerk, vanaf de eerste versie.</p>
 
             <div class="cta-buttons">
               <a href="#contact" class="cta-btn">
-                <span>Vraag jouw gratis demo aan</span>
+                <span>Ontvang je gratis demo</span>
                 <svg class="cta-arrow-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <line x1="5" y1="12" x2="19" y2="12"></line>
                   <polyline points="12 5 19 12 12 19"></polyline>
