--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ Altijd maatwerk, vanaf de eerste versie.</p>
           <div class="cta-content">
             <h2 class="cta-title">Gratis demo van jouw website?</h2>
             <p class="cta-description">
-              Ik ontwerp binnen 1–2 dagen een op maat gemaakte homepage voor jouw bedrijf in Limburg — jij beoordeelt eerst, betaalt pas als het goed voelt.
+              Zo hoef je geen beslissing te nemen op gevoel of beloftes. Je ziet rustig wat je krijgt, kunt het laten bezinken en bepaalt zelf of dit past bij jouw bedrijf.
             </p>
 
             <div class="cta-buttons">
