--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ Altijd maatwerk, vanaf de eerste versie.</p>
               </div>
             </div>
             <a class="plan-cta-button" href="#contact">
-              <span>Bekijk wat er precies in dit pakket zit →</span>
+              <span>Bekijk pakketdetails →</span>
               <svg class="plan-arrow-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
             </a>
           </div>
@@ -583,7 +583,7 @@ Altijd maatwerk, vanaf de eerste versie.</p>
               </div>
             </div>
             <a class="plan-cta-button" href="#contact">
-              <span>Zie welke upgrades je krijgt →</span>
+              <span>Bekijk pakketdetails →</span>
               <svg class="plan-arrow-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
             </a>
           </div>
@@ -627,7 +627,7 @@ Altijd maatwerk, vanaf de eerste versie.</p>
               </div>
             </div>
             <a class="plan-cta-button" href="#contact">
-              <span>Ontdek waarom dit traject anders is →</span>
+              <span>Bekijk pakketdetails →</span>
               <svg class="plan-arrow-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
             </a>
           </div>
