--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ Altijd maatwerk, vanaf de eerste versie.</p>
 
         <div class="website-plan-info">
           <h3 class="website-plan-info-title">Nog goed om te weten</h3>
-          <p class="website-plan-info-text">Alle websites worden met de hand ontworpen én gebouwd, volledig afgestemd op jouw onderneming. Je krijgt altijd een snelle, schaalbare en technisch sterke basis die je later zonder problemen kunt uitbreiden. Ook de vindbaarheid, beveiliging en structuur worden in elk pakket professioneel ingericht — dat maakt de pakketten verschillend in opties, maar gelijk in kwaliteit.</p>
+          <p class="website-plan-info-text">Alle websites worden op maat ontworpen en gebouwd. Elke website heeft een snelle, veilige en schaalbare basis met professionele structuur en vindbaarheid. De pakketten verschillen in opties, niet in kwaliteit.</p>
         </div>
       </div>
     </section>
