--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@ Altijd maatwerk, vanaf de eerste versie.</p>
     <section class="process-section">
       <div class="process-container">
         <div class="process-left">
-          <h2 class="process-heading">Laten we het gewoon makkelijk houden</h2>
+          <h2 class="process-heading">Zo werken we samen</h2>
 
           <div class="process-text">
             <p class="process-intro">Samenwerken moet simpel en duidelijk zijn. Je begint altijd op mijn prijzenpagina. Daar kies je wat je nodig hebt of je stelt je eigen pakket samen. Je vult kort het formulier in en vertelt wie je bent en wat je zoekt. Geen gedoe, geen lange intake – gewoon helder starten.</p>
