--- a/index.html
+++ b/index.html
@@ -647,13 +647,24 @@ Altijd maatwerk, vanaf de eerste versie.</p>
           <h2 class="process-heading">Zo werken we samen</h2>
 
           <div class="process-text">
-            <p class="process-intro">Samenwerken moet simpel en duidelijk zijn. Je begint altijd op mijn prijzenpagina. Daar kies je wat je nodig hebt of je stelt je eigen pakket samen. Je vult kort het formulier in en vertelt wie je bent en wat je zoekt. Geen gedoe, geen lange intake – gewoon helder starten.</p>
+            <div class="process-text">
+  <p class="process-intro">
+    Of je nu zzp’er bent, een mkb-bedrijf runt of werkt binnen een groter team: het proces blijft overzichtelijk en beheersbaar. De aanpak is altijd afgestemd op de schaal en fase van jouw bedrijf — van een eerste professionele online basis tot een website die meerdere diensten, vestigingen of doelgroepen ondersteunt.
+  </p>
 
-            <p class="process-intro">Met die informatie ga ik voor je aan de slag en maak ik binnen twee dagen een gratis demo van jouw website. Dat is geen standaard template, maar echt een eerste opzet in jouw stijl. Zo kun je meteen zien of het goed voelt zonder ergens aan vast te zitten.</p>
+  <p class="process-intro">
+    Je start op de prijzenpagina en kiest wat past bij jouw situatie, of stelt zelf een pakket samen. Via het formulier geef je kort context over je bedrijf en doel. Dat is genoeg om gericht te kunnen werken, zonder uitgebreide intake of onnodige stappen vooraf.
+  </p>
 
-            <p class="process-intro">Ben je enthousiast? Mooi, dan bouwen we jouw website verder uit en neem ik je mee in het proces. Jij geeft feedback, ik stuur bij en zorg dat alles klopt: uitstraling, structuur en inhoud. Mijn webdesign voor kleine ondernemers in Limburg draait om samenwerken op basis van vertrouwen – jij blijft betrokken, en ik denk actief met je mee.</p>
+  <p class="process-intro">
+    Op basis daarvan werk ik een eerste concrete opzet uit. Die laat zien hoe structuur, uitstraling en inhoud samenkomen voor jouw type bedrijf. Zo kun je beoordelen of de richting klopt voordat we verder bouwen — transparant en zonder verplichtingen.
+  </p>
 
-            <p class="process-intro">Is alles naar wens? Dan zetten we jouw website live en kun jij er trots mee naar buiten.</p>
+  <p class="process-intro">
+    Tijdens de verdere samenwerking bewaak ik techniek, structuur en consistentie, terwijl jij betrokken blijft bij de keuzes. Is alles afgerond, dan wordt de website live gezet met een stabiele, schaalbare basis die klaar is voor groei, aanpassingen en uitbreiding.
+  </p>
+</div>
+
           </div>
         </div>
 
