--- a/index.html
+++ b/index.html
@@ -682,8 +682,8 @@ Altijd maatwerk, vanaf de eerste versie.</p>
                 </svg>
               </div>
               <div>
-                <h3 class="step-title">Kies & vertel</h3>
-                <p class="step-description">Selecteer je pakket en vul het formulier in</p>
+                <h3 class="step-title">Voor elk type bedrijf</h3>
+                <p class="step-description">Of je nu zzp’er bent, een mkb-bedrijf runt of werkt binnen een groter team: de aanpak past zich aan aan jouw schaal en situatie.</p>
               </div>
             </div>
 
@@ -697,8 +697,8 @@ Altijd maatwerk, vanaf de eerste versie.</p>
                 </svg>
               </div>
               <div>
-                <h3 class="step-title">Demo binnen 2 dagen</h3>
-                <p class="step-description">Ontvang een eerste opzet in jouw stijl</p>
+                <h3 class="step-title">Geen standaardoplossing</h3>
+                <p class="step-description">Elke website wordt volledig op maat ontworpen en gebouwd. Geen templates, geen vaste formats wel een oplossing die past bij jouw doelen.</p>
               </div>
             </div>
 
@@ -710,8 +710,8 @@ Altijd maatwerk, vanaf de eerste versie.</p>
                 </svg>
               </div>
               <div>
-                <h3 class="step-title">Samenwerken</h3>
-                <p class="step-description">Feedback geven en samen verfijnen</p>
+                <h3 class="step-title">Heldere samenwerking</h3>
+                <p class="step-description">Je blijft betrokken bij keuzes en voortgang. Feedbackmomenten zijn duidelijk en overzichtelijk, zonder onnodige overleggen.</p>
               </div>
             </div>
 
@@ -724,8 +724,8 @@ Altijd maatwerk, vanaf de eerste versie.</p>
                 </svg>
               </div>
               <div>
-                <h3 class="step-title">Live!</h3>
-                <p class="step-description">Jouw website gaat de wereld in</p>
+                <h3 class="step-title">Klaar voor groei</h3>
+                <p class="step-description">De website wordt opgeleverd met een stabiele, uitbreidbare basis die meegroeit met je bedrijf, diensten of team.</p>
               </div>
             </div>
           </div>
