--- a/index.html
+++ b/index.html
@@ -810,8 +810,7 @@ Ik ben Kay Huybreghs uit Venlo en al jaren bezig met het ontwerpen en optimalise
       <div class="faq-content">
         <div class="faq-left-section">
           <div class="faq-header">
-            <h2>Frequently asked</h2>
-            <h2>questions</h2>
+            <h2>Veelgestelde vragen</h2>
           </div>
 
           <div class="faq-action-cards">
