--- a/index.html
+++ b/index.html
@@ -1073,8 +1073,9 @@ Google Search Console en Google Analytics worden netjes ingericht. Wil je zelf i
 
           <div class="footer-cta-content">
             <div class="footer-cta-text">
-              <h2>Klaar om jouw website naar het volgende niveau te tillen?</h2>
-              <p>Vul het formulier in en krijg binnen 2 dagen een gratis demo van jouw perfecte website. Geen verplichtingen, gewoon kijken wat mogelijk is.</p>
+              <h2>Klaar om serieus werk te maken van je website?</h2>
+              <p>
+Vertel kort wat je zoekt en waar je tegenaan loopt. Ik denk met je mee en geef eerlijk advies over wat voor jouw bedrijf werkt.</p>
             </div>
 
             <form class="footer-contact-form" id="footerContactForm">
