--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ Altijd maatwerk, vanaf de eerste versie.</p>
                 <ul class="plan-features-list">
                   <li class="plan-feature-item">
                     <svg class="plan-check-icon" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"></polyline></svg>
-                    <span class="plan-feature-text">Een uitgebreidere website die meegroeit met je bedrijf.</span>
+                    <span class="plan-feature-text">Een uitgebreidere website met meer functies en pagina's.</span>
                   </li>
                   <li class="plan-feature-item">
                     <svg class="plan-check-icon" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"></polyline></svg>
@@ -507,7 +507,7 @@ Altijd maatwerk, vanaf de eerste versie.</p>
 
         <div class="website-plan-info">
           <h3 class="website-plan-info-title">Nog goed om te weten</h3>
-          <p class="website-plan-info-text">Alle websites worden op maat ontworpen en gebouwd. Elke website heeft een snelle, veilige en schaalbare basis met professionele structuur en vindbaarheid. De pakketten verschillen in opties, niet in kwaliteit.</p>
+          <p class="website-plan-info-text">Iedere website wordt volledig ontworpen naar jouw wensen. Elke site heeft een snelle, veilige en schaalbare basis met professionele structuur en vindbaarheid. De pakketten verschillen in opties, niet in kwaliteit.</p>
         </div>
       </div>
     </section>
@@ -570,7 +570,7 @@ Altijd maatwerk, vanaf de eerste versie.</p>
               </div>
               <div>
                 <h3 class="step-title">Geen standaardoplossing</h3>
-                <p class="step-description">Elke website wordt volledig op maat ontworpen en gebouwd. Geen templates, geen vaste formats wel een oplossing die past bij jouw doelen.</p>
+                <p class="step-description">Geen templates, geen standaard formats — alleen maatwerk dat precies aansluit op jouw bedrijf en doelen.</p>
               </div>
             </div>
 
@@ -597,7 +597,7 @@ Altijd maatwerk, vanaf de eerste versie.</p>
               </div>
               <div>
                 <h3 class="step-title">Klaar voor groei</h3>
-                <p class="step-description">De website wordt opgeleverd met een stabiele, uitbreidbare basis die meegroeit met je bedrijf, diensten of team.</p>
+                <p class="step-description">De website wordt opgeleverd met een stabiele, uitbreidbare basis die flexibel is voor toekomstige aanpassingen.</p>
               </div>
             </div>
           </div>
@@ -615,7 +615,7 @@ Altijd maatwerk, vanaf de eerste versie.</p>
             <p class="about-nest-description">
               Een website moet meteen goed voelen. Rust, overzicht en duidelijkheid geen drukte, geen loze beloftes. Bezoekers willen in één oogopslag begrijpen wie je bent, wat je doet en of ze je kunnen vertrouwen. Als dat niet klopt, zijn ze weg. Daarom bouw ik websites vanuit structuur en logica, niet vanuit trends of trucjes. Alles draait om helderheid: snelle laadtijden, een duidelijke opbouw en een ervaring die klopt van begin tot eind.<br>
               <br>
-Ik ben Kay Huybreghs uit Venlo en al jaren bezig met het ontwerpen en optimaliseren van websites voor ondernemers. Ik werk bewust persoonlijk, met korte lijnen en eerlijke keuzes. Of je nu zzp’er bent, een mkb-bedrijf runt of groeit naar iets groters de aanpak blijft hetzelfde.. een technisch sterke website die meegroeit met je bedrijf en je online serieus neerzet.
+Ik ben Kay Huybreghs uit Venlo en bouw sinds jaren sterke websites voor ondernemers. Ik werk rechtlijnig met duidelijke communicatie en eerlijke keuzes. Of je nu solo begint, een team runt of wilt schalen — de aanpak blijft hetzelfde: een website die technisch sterk is en je bedrijf professioneel presenteert.
             </p>
             <button class="about-nest-button">
               Meer over ons
