--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@ Compleet opgeleverd.</p>
             <img src="/khcustomweb_logo.webp" alt="KH Custom Web">
           </div>
           <div class="feature-content">
-            <h3 class="feature-title">Sterk in lokale SEO</h3>
-            <p class="feature-description">Scoor beter in Google in jouw regio. Ideaal voor lokale ondernemers in Limburg.</p>
+            <h3 class="feature-title">Vindbaar op Google</h3>
+            <p class="feature-description">Je website is gebouwd om goed voor te komen in lokale zoekopdrachten. Gericht op jouw regio.</p>
           </div>
         </div>
 
@@ -233,7 +233,7 @@ Compleet opgeleverd.</p>
       <!-- Column 4 - Analytics -->
       <div class="card card-analytics">
         <h3 class="analytics-title">Groeien zonder advertenties</h3>
-        <p class="analytics-description">Organisch meer bereik via Google<br>met sterke lokale SEO en een technisch goede website.</p>
+        <p class="analytics-description">Meer zichtbaarheid in zoekresultaten<br>door technisch sterke websites die Google begrijpt.</p>
         <div class="analytics-visual">
           <div class="concentric-circles">
             <div class="circle circle-1"></div>
@@ -278,9 +278,8 @@ Bij elk project start ik standaard met een concrete demo van jouw website, zodat
                   <polyline points="12 6 12 12 16 14"></polyline>
                 </svg>
               </div>
-              <div class="promise-number">Geen standaard template</div>
-              <p>Elke demo wordt specifiek ontworpen voor jouw branche en doelen.
-Altijd maatwerk, vanaf de eerste versie.</p>
+              <div class="promise-number">Altijd maatwerk</div>
+              <p>Elk ontwerp is gericht op jouw specifieke branche en bedrijfsdoelen.</p>
             </div>
             <div class="promise-item">
               <div class="promise-icon">
@@ -570,7 +569,7 @@ Altijd maatwerk, vanaf de eerste versie.</p>
               </div>
               <div>
                 <h3 class="step-title">Geen standaardoplossing</h3>
-                <p class="step-description">Geen templates, geen standaard formats — alleen maatwerk dat precies aansluit op jouw bedrijf en doelen.</p>
+                <p class="step-description">Met volledig handmatig ontwerp krijg je precies wat past bij jouw bedrijf en doelstelling.</p>
               </div>
             </div>
 
@@ -755,8 +754,8 @@ Ik ben Kay Huybreghs uit Venlo en bouw sinds jaren sterke websites voor ondernem
               <div class="faq-answer">
                 <div class="faq-answer-content">
                   <div class="faq-answer-text">
-                    <p>Wanneer je via de Prijzen & Mogelijkheden-pagina of via het contactformulier een aanvraag doet, maak ik binnen 1–2 dagen een volledig op maat ontworpen demo van jouw homepage.<br>
-Geen templates, geen standaard werk ik ontwerp echt een eerste versie gebaseerd op jouw stijlkeuzes en doelen.</p>
+                    <p>Wanneer je een aanvraag doet, maak ik binnen 1–2 dagen een eerste versie van jouw homepage.<br>
+Dit is altijd gebaseerd op jouw stijlkeuzes en bedrijfsdoelen — geen standaardwerk.</p>
                     <p>Je krijgt daarna een live link waar je jouw demo kunt bekijken. Pas ná jouw goedkeuring start ik met het echte project. Vind je het niets? Dan stopt het gewoon zonder kosten, zonder verplichting.<br>
 Ik vertrouw op mijn werk en wil dat jij vooraf precies ziet wat je kunt verwachten.</p>
                     <p>Kies je een pakket? Dan kun je afhankelijk van je keuze binnen één week online zijn.</p>
@@ -775,14 +774,13 @@ Ik vertrouw op mijn werk en wil dat jij vooraf precies ziet wat je kunt verwacht
               <div class="faq-answer">
                 <div class="faq-answer-content">
                   <div class="faq-answer-text">
-                    <p>Ja. Alles wordt volledig met de hand gecodeerd in HTML, CSS en JavaScript.<br>
-Geen WordPress, geen thema's, geen page-builders.</p>
-                    <span class="faq-list-intro">Daardoor is jouw website:</span>
+                    <p>Ja. Alles wordt volledig met de hand gecodeerd in HTML, CSS en JavaScript — geen WordPress, templates of page-builders.</p>
+                    <span class="faq-list-intro">Dat betekent:</span>
                     <ul>
-                      <li>supersnel (lichte code, minimale laadtijd)</li>
-                      <li>SEO-technisch sterk</li>
-                      <li>veilig en schaalbaar</li>
-                      <li>volledig aanpasbaar in jouw stijl</li>
+                      <li>Snelle laadtijden dankzij lichte, optimale code</li>
+                      <li>Vindbaar op Google door technisch sterke bouw</li>
+                      <li>Veilig en schaalbaar voor de toekomst</li>
+                      <li>Volledig aanpasbaar naar jouw wensen</li>
                     </ul>
                     <p>Ik bouw iedere website alsof het een uniek project is — passend bij jouw bedrijf, doelgroep en regio (bijv. Venlo, Peel en Maas of de rest van Limburg).</p>
                     
@@ -816,7 +814,7 @@ Geen WordPress, geen thema's, geen page-builders.</p>
 
             <div class="faq-item">
               <button class="faq-question">
-                <span>Hoe zit het met vindbaarheid (SEO) en snelheid?</span>
+                <span>Hoe zit het met vindbaarheid op Google en snelheid?</span>
                 <svg class="faq-chevron-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <path d="m6 9 6 6 6-6"/>
                 </svg>
@@ -824,14 +822,7 @@ Geen WordPress, geen thema's, geen page-builders.</p>
               <div class="faq-answer">
                 <div class="faq-answer-content">
                   <div class="faq-answer-text">
-                    <p>Omdat ik alles handmatig codeer, scoort iedere site standaard:</p>
-                    <ul>
-                      <li>snel in laadtijd</li>
-                      <li>technisch optimaal voor SEO</li>
-                      <li>duidelijk gestructureerd voor Google</li>
-                    </ul>
-                    <p>De vindbaarheid hangt daarnaast ook af van de kwaliteit van je teksten.<br>
-Je kunt die zelf aanleveren, maar veel klanten kiezen ervoor om dit door mij of een andere copywriter te laten schrijven, zodat de pagina's beter scoren op lokale zoekopdrachten</p>
+                    <p>Omdat ik alles handmatig codeer, is elke website snel en technisch optimaal gebouwd. Verder hangt de zichtbaarheid op Google af van jouw inhoud en hoe goed je je doelgroep bereikt. Je kunt zelf schrijven of dit uitbesteden.</p>
                   </div>
                 </div>
               </div>
