--- a/index.html
+++ b/index.html
@@ -612,9 +612,9 @@ Bij elk project start ik standaard met een concrete demo van jouw website, zodat
             <p class="about-nest-label">NEEM EEN KIJKJE IN</p>
             <h2 class="about-nest-heading">Mijn werk</h2>
             <p class="about-nest-description">
-              Een website moet meteen goed voelen. Rust, overzicht en duidelijkheid geen drukte, geen loze beloftes. Bezoekers willen in één oogopslag begrijpen wie je bent, wat je doet en of ze je kunnen vertrouwen. Als dat niet klopt, zijn ze weg. Daarom bouw ik websites vanuit structuur en logica, niet vanuit trends of trucjes. Alles draait om helderheid: snelle laadtijden, een duidelijke opbouw en een ervaring die klopt van begin tot eind.<br>
+              Een website moet meteen goed voelen. Rust, overzicht en duidelijkheid geen drukte, geen loze beloftes. Bezoekers willen in één oogopslag begrijpen wie je bent, wat je doet en of ze je kunnen vertrouwen. Als dat niet klopt, zijn ze weg. Een verouderde of rommelige website zorgt juist voor twijfel, afhakers en gemiste aanvragen, nog vóórdat iemand contact opneemt. Daarom bouw ik websites vanuit structuur en logica, niet vanuit trends of trucjes. Alles draait om helderheid: snelle laadtijden, een duidelijke opbouw en een ervaring die klopt van begin tot eind.<br>
               <br>
-Ik ben Kay Huybreghs uit Venlo en bouw sinds jaren sterke websites voor ondernemers. Ik werk rechtlijnig met duidelijke communicatie en eerlijke keuzes. Of je nu solo begint, een team runt of wilt schalen — de aanpak blijft hetzelfde: een website die technisch sterk is en je bedrijf professioneel presenteert.
+Ik ben Kay Huybreghs uit Venlo en bouw sinds jaren sterke websites voor ondernemers. Ik werk rechtlijnig met duidelijke communicatie en eerlijke keuzes. Of je nu solo begint, een team runt of wilt schalen de aanpak blijft hetzelfde: een website die technisch sterk is, vertrouwen uitstraalt en je bedrijf professioneel neerzet.
             </p>
             <button class="about-nest-button">
               Meer over ons
